--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,14 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.firebase:firebase-firestore:23.0.4'
+    implementation 'com.google.firebase:firebase-functions:20.0.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.+'
     implementation "io.grpc:grpc-okhttp:1.32.2"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.arcadefire:nice-spinner:1.4.4'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
     //TabBar
     implementation 'com.github.ismaeldivita:chip-navigation-bar:1.3.4'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.7'
